displaying query and its intent

--- a/getEmail.ipynb
+++ b/getEmail.ipynb
@@ -135,9 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'text': 'Hi, I have forgotten the password for my account. Can you help me?\\r\\n', 'external_id': None, 'error': False, 'classifications': [{'tag_name': 'password_recovery', 'tag_id': 122893945, 'confidence': 1.0}]}]\n"
+     ]
+    }
+   ],
    "source": [
     "from monkeylearn import MonkeyLearn\n",
     "\n",
@@ -145,44 +153,38 @@
     "data = [msg_body]\n",
     "model_id = 'cl_VGoxtFhL'\n",
     "result = ml.classifiers.classify(model_id, data)\n",
-    "# print(result.body)"
+    "print(result.body)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "query = result.body[0]['text']\n",
     "classification_result = result.body[0]['classifications']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'password_recovery'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer query:  Hi, I have forgotten the password for my account. Can you help me?\r\n",
+      "\n",
+      "Intent:  password_recovery\n"
+     ]
     }
    ],
    "source": [
-    "classification_result[0]['tag_name']"
+    "print(\"Customer query: \", query)\n",
+    "print(\"Intent: \", classification_result[0]['tag_name'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
